--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,12 @@
         <module>tzy-demo-annotation</module>
         <module>tzy-demo-mqtt</module>
         <module>tzy-demo-websocket-netty</module>
+        <module>tzy-demo-seed</module>
     </modules>
 
     <!-- 统一管理jar包版本 -->
     <properties>
+        <java.version>1.8</java.version>
         <spring-boot.version>2.2.7.RELEASE</spring-boot.version>
         <spring-cloud.version>Hoxton.SR3</spring-cloud.version>
         <spring-cloud-alibaba.version>2.2.1.RELEASE</spring-cloud-alibaba.version>
